[gd_scene load_steps=4 format=2]

[ext_resource path="res://map.gd" type="Script" id=1]
[ext_resource path="res://UITheme.tres" type="Theme" id=2]
[ext_resource path="res://GUIControl.gd" type="Script" id=3]

[node name="root" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 256.0
margin_bottom = 240.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 256.0
margin_bottom = 240.0
color = Color( 0.75, 0.75, 0.75, 1 )

[node name="TopBar" type="Panel" parent="Control"]
margin_right = 256.0
margin_bottom = 16.0

[node name="MemFree_Title" type="Label" parent="Control/TopBar"]
margin_left = 6.0
margin_top = 3.0
margin_right = 38.0
margin_bottom = 13.0
text = "Mem:"

[node name="MemFree_Value" type="Label" parent="Control/TopBar"]
margin_left = 36.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 13.0
text = "1"

[node name="Mode_Title" type="Label" parent="Control/TopBar"]
margin_left = 83.0
margin_top = 3.0
margin_right = 163.0
margin_bottom = 13.0
text = "SIMULATION"
align = 1

[node name="TargetsLeft_Title" type="Label" parent="Control/TopBar"]
margin_left = 207.0
margin_top = 3.0
margin_right = 240.0
margin_bottom = 13.0
text = "TGT:"

[node name="TargetsLeft_Value" type="Label" parent="Control/TopBar"]
margin_left = 237.0
margin_top = 3.0
margin_right = 257.0
margin_bottom = 13.0
text = "1"

[node name="BottomBar" type="Panel" parent="Control"]
margin_top = 224.0
margin_right = 256.0
margin_bottom = 240.0

[node name="map" type="Node2D" parent="."]
position = Vector2( 0, 16 )
script = ExtResource( 1 )
